--- a/app/src/main/res/drawable/rectangularborder.xml
+++ b/app/src/main/res/drawable/rectangularborder.xml
@@ -8,5 +8,5 @@
         android:bottomLeftRadius="0dp" />
     <stroke
         android:width="1dp"
-        android:color="@android:color/black" />
+        android:color="@android:color/white" />
 </shape>
