--- a/app/src/main/res/layout/activity_display_profile.xml
+++ b/app/src/main/res/layout/activity_display_profile.xml
@@ -187,7 +187,10 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="5sp"
+                android:layout_marginBottom="5sp"
+                android:layout_marginRight="5sp"
+                android:layout_marginTop="20sp"
                 app:cardBackgroundColor="#90ffffff"
                 app:cardElevation="8dp"
                 app:contentPadding="10dp">
@@ -250,6 +253,7 @@
                     android:layout_height="100sp">
 
                     <LinearLayout
+                        android:paddingLeft="20sp"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
@@ -471,7 +475,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Height "
+                        android:text="Height(cm) "
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -484,7 +488,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Weight"
+                        android:text="Weight(kg)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -541,7 +545,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Chest"
+                        android:text="Chest(cm)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -554,7 +558,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Waist"
+                        android:text="Waist(cm)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
