--- a/app/src/main/res/layout/activity_ref_and_earn.xml
+++ b/app/src/main/res/layout/activity_ref_and_earn.xml
@@ -11,8 +11,8 @@
     <ImageView
         android:id="@+id/refandearnimage"
         android:layout_centerHorizontal="true"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/refandearn"/>
 
     <TextView
@@ -25,15 +25,18 @@
         android:text="Share the following referal code with your friends and gain Five coins each."/>
 
     <TextView
+        android:background="@drawable/rectangularborder"
         android:layout_marginTop="15dp"
-        android:layout_width="150dp"
+        android:layout_width="180dp"
         android:id="@+id/refcode"
-        android:layout_height="wrap_content"
+        android:layout_marginBottom="10sp"
+        android:layout_height="30sp"
         android:layout_below="@id/refandearntext"
         android:layout_centerHorizontal="true"/>
 
 
     <LinearLayout
+        android:layout_marginTop="30sp"
         android:onClick="shareIntent"
         android:background="@drawable/border"
         android:layout_centerHorizontal="true"
@@ -42,11 +45,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/shareimage"
-        android:layout_width="20dp"
-        android:layout_height="20dp" />
     <TextView
+        android:gravity="center"
+        android:paddingLeft="10sp"
+        android:paddingRight="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/refcode"
