--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,21 @@
     <color name="blue_500">#2196F3</color>
     <color name="purple_500">#9C27B0</color>
     <color name="deep_purple_500">#673AB7</color>
+
+    <color name="demo_light_transparent">#16000000</color>
+    <color name="default_shimmer_color">#e3e1e3</color>
+
+
+    <color name="colorPrimaryGrid">#2874f0</color>
+    <color name="colorPrimaryDarkGrid">#2368d7</color>
+    <color name="colorAccentGrid">#388e3c</color>
+
+    <color name="textPrimaryGrid">#717171</color>
+    <color name="textSecondaryGrid">@color/colorAccentGrid</color>
+    <color name="textTertiaryGrid">#737373</color>
+
+    <color name="textPrimary">#212121</color>
+    <color name="textSecondary">#8b8b8b</color>
+
+    <color name="demo_dark_transparent">#24000000</color>
 </resources>
