--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,4 +38,13 @@
     <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+
+    <style name="AppThemeGrid" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimaryGrid</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkGrid</item>
+        <item name="colorAccent">@color/colorAccentGrid</item>
+        <item name="android:label">@string/ab_grid_title</item>
+    </style>
 </resources>
