--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -30,5 +30,13 @@ limitations under the License.
         <attr name="shimmer_demo_angle" format="integer|reference" />
         <attr name="shimmer_demo_view_holder_item_background" format="color|reference" />
         <attr name="shimmer_demo_duration" format="integer|reference" />
+
+    </declare-styleable>
+
+    <declare-styleable name="FoldingCell">
+        <attr name="backSideColor" format="color" />
+        <attr name="animationDuration" format="integer" />
+        <attr name="additionalFlipsCount" format="integer" />
+        <attr name="cameraHeight" format="integer" />
     </declare-styleable>
 </resources>
