--- a/app/src/main/res/layout/activity_encounters_main.xml
+++ b/app/src/main/res/layout/activity_encounters_main.xml
@@ -4,7 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-
     android:background="@drawable/bg_gradient"
     android:layout_height="match_parent">
 
@@ -23,13 +22,13 @@
         app:swipeThreshold="0.75"
         app:translationDiff="12"
         app:scaleDiff="0.02"
-        app:stackFrom="top"
+        app:stackFrom="bottom"
         app:elevationEnabled="true"
         app:swipeEnabled="true"
-        app:swipeDirection="freedom_no_bottom"
+        app:swipeDirection="horizontal"
         app:leftOverlay="@layout/overlay_left"
         app:rightOverlay="@layout/overlay_right"
-        app:topOverlay="@layout/overlay_top" />
+         />
 
     <LinearLayout
         android:padding="5sp"
@@ -46,30 +45,34 @@
 
 
         <ImageView
-            android:src="@drawable/star_green"
+            android:src="@drawable/forbidden_mark75"
             android:layout_width="0dp"
+            android:scaleX="0.9"
+            android:scaleY="0.9"
             android:layout_weight="1"
             android:layout_height="30sp" />
 
         <ImageView
-            android:src="@drawable/undo_this"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="30sp" />
-
-
-        <ImageView
-            android:src="@drawable/icon_red_cross"
+            android:src="@drawable/undo75"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="30sp" />
 
 
+        <ImageView
+            android:src="@drawable/close_envelope5"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="30sp" />
+
+
 
         <ImageView
 
-            android:src="@drawable/message_this"
+            android:src="@drawable/star75"
             android:layout_width="0dp"
+            android:scaleY="1.1"
+            android:scaleX="1.1"
             android:layout_weight="1"
             android:layout_height="30sp" />
 
