--- a/app/src/main/res/layout/overlay_left.xml
+++ b/app/src/main/res/layout/overlay_left.xml
@@ -14,6 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@mipmap/overlay_left"/>
+        android:src="@drawable/access_denied100"/>
 
 </android.support.v7.widget.CardView>
