Avinash: signup3 updates

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     tools:context="com.twenty.four.crafts.app_startup.Login2"
     android:focusable="true"
     android:id="@+id/parentLayout"
+    android:fitsSystemWindows="true"
     android:focusableInTouchMode="true"
     android:screenOrientation="portrait">
 
