--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -84,12 +84,16 @@
 
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_firstname"
             android:layout_width="match_parent"
             android:layout_height="60sp"
             android:gravity="center"
             android:layout_marginTop="10sp"
             android:layout_marginLeft="16sp"
             android:layout_marginRight="16sp"
+            android:hint="First Name"
+            android:textColorHint="#ffffff"
+            android:textSize="16sp"
             app:errorEnabled="true">
 
             <EditText
@@ -97,25 +101,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:paddingLeft="5sp"
+                android:textSize="16sp"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
-                android:hint="First Name"
-                android:textColorHint="#ffffff"
-                android:textSize="16sp"
                 android:inputType="textCapWords|textCapSentences"/>
 
         </android.support.design.widget.TextInputLayout>
 
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_lastname"
             android:layout_width="match_parent"
             android:layout_height="60sp"
             android:gravity="center"
             android:layout_marginTop="10sp"
             android:layout_marginLeft="16sp"
             android:layout_marginRight="16sp"
+            android:hint="Last Name"
+            android:textColorHint="#ffffff"
+            android:textSize="16sp"
             app:errorEnabled="true">
 
             <EditText
@@ -124,24 +130,26 @@
                 android:layout_height="50sp"
                 android:paddingLeft="5sp"
                 android:layout_gravity="center"
+                android:textSize="16sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
-                android:hint="Last Name"
-                android:textColorHint="#ffffff"
-                android:textSize="16sp"
                 android:inputType="textCapWords|textCapSentences" />
 
         </android.support.design.widget.TextInputLayout>
 
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_email"
             android:layout_width="match_parent"
             android:layout_height="60sp"
             android:gravity="center"
             android:layout_marginTop="10sp"
             android:layout_marginLeft="16sp"
             android:layout_marginRight="16sp"
+            android:hint="Email"
+            android:textColorHint="#ffffff"
+            android:textSize="16sp"
             app:errorEnabled="true">
 
             <EditText
@@ -151,11 +159,9 @@
                 android:paddingLeft="5sp"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="true"
+                android:textSize="16sp"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
-                android:hint="Email"
-                android:textColorHint="#ffffff"
-                android:textSize="16sp"
                 android:inputType="textEmailAddress" />
 
         </android.support.design.widget.TextInputLayout>
@@ -163,12 +169,17 @@
 
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="60sp"
             android:gravity="center"
             android:layout_marginTop="10sp"
             android:layout_marginLeft="16sp"
             android:layout_marginRight="16sp"
+            android:textSize="16sp"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textColorHint="#ffffff"
             app:errorEnabled="true">
 
             <EditText
@@ -177,23 +188,27 @@
                 android:layout_height="50sp"
                 android:paddingLeft="5sp"
                 android:layout_gravity="center"
+                android:inputType="textPassword"
+                android:textSize="16sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:ems="10"
-                android:hint="Password"
-                android:textColorHint="#ffffff"
-                android:textSize="16sp" />
+                android:ems="10" />
 
         </android.support.design.widget.TextInputLayout>
 
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_confirmpassword"
             android:layout_width="match_parent"
-            android:layout_height="60sp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="10sp"
             android:layout_marginLeft="16sp"
             android:layout_marginRight="16sp"
+            android:hint="Confirm Password"
+            android:inputType="textPassword"
+            android:textColorHint="#ffffff"
+            android:textSize="16sp"
             app:errorEnabled="true">
 
             <EditText
@@ -201,18 +216,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:paddingLeft="5sp"
+                android:textSize="16sp"
+                android:inputType="textPassword"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:ems="10"
-                android:hint="Confirm Password"
-                android:textColorHint="#ffffff"
-                android:textSize="16sp" />
+                android:ems="10" />
 
         </android.support.design.widget.TextInputLayout>
         
-        
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="#80ffffff"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"/>
 
 
         <LinearLayout
@@ -289,6 +307,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="fill_parent"
                         android:hint="Click to set DOB"
+                        android:textColorHint="#ffffff"
                         android:gravity="center_vertical"
                         android:textColor="#ffffff"
                         android:paddingLeft="2sp"
@@ -324,6 +343,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8sp"
                 android:hint="Select Residing In"
+                android:textColorHint="#ffffff"
                 android:textColor="#ffffff"
                 android:paddingLeft="2sp"
                 android:textSize="16sp"
@@ -360,6 +380,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8sp"
                 android:hint="Select Native (Hometown)"
+                android:textColorHint="#ffffff"
                 android:textColor="#ffffff"
                 android:paddingLeft="2sp"
                 android:textSize="16sp"
@@ -396,6 +417,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8sp"
                 android:hint="Select Languages Spoken"
+                android:textColorHint="#ffffff"
                 android:textColor="#ffffff"
                 android:paddingLeft="2sp"
                 android:textSize="16sp"
@@ -445,13 +467,12 @@
         android:layout_width="match_parent"
         android:layout_height="40sp"
         android:layout_marginTop="40sp"
-        android:background="#004e92"
         android:gravity="center"
         android:layout_gravity="center_horizontal"
         android:text="Next"
-        android:elevation="5sp"
+        android:background="#004e92"
+        android:elevation="8sp"
         android:textColor="#ffffff"
-        android:layout_weight="0.25"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
