--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/blur"
+    android:background="@drawable/bg_gradient"
     android:padding="10dp"
     android:orientation="vertical"
     tools:context="com.twenty.four.crafts.registration.StartingScreen">
