--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/wall"
-    android:fillViewport="true"
-    android:orientation="vertical"
+    android:background="@drawable/bg_gradient"
     tools:context="com.twenty.four.crafts.DirectoryFragment">
+
+
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    android:fillViewport="true">
 
 
               <LinearLayout
@@ -21,14 +26,36 @@
            android:layout_height="250dp"
            android:layout_marginBottom="20sp"/>
 
-       <android.support.v7.widget.RecyclerView
+       <!--<android.support.v7.widget.RecyclerView
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:id="@+id/rv"/>
+           android:id="@+id/rv"/>-->
+                  <GridView
+                      android:padding="5sp"
+                      android:horizontalSpacing="10sp"
+                      android:verticalSpacing="10sp"
+                      android:gravity="center"
+                      android:numColumns="3"
+                      android:id="@+id/gv"
+                      android:layout_marginTop="10sp"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"/>
+
               </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+</ScrollView>
 
 
+    <com.google.android.gms.ads.AdView
+        xmlns:ads = "http://schemas.android.com/apk/res-auto"
+        android:id="@+id/ad_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id" />
+
+</RelativeLayout>
 
