--- a/app/src/main/res/layout/activity_display_profile.xml
+++ b/app/src/main/res/layout/activity_display_profile.xml
@@ -173,6 +173,7 @@
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
+        android:paddingBottom="?android:attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
