--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -43,8 +43,8 @@
 
         <RelativeLayout
             android:layout_marginTop="30sp"
-            android:layout_width="160sp"
-            android:layout_height="160sp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_gravity="center"
             android:orientation="horizontal">
 
@@ -52,8 +52,8 @@
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
                 android:id="@+id/profile_image"
-                android:layout_width="160sp"
-                android:layout_height="160sp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_marginBottom="10sp"
                 android:elevation="8sp"
                 android:src="@drawable/com_facebook_profile_picture_blank_square"/>
@@ -66,7 +66,7 @@
                 app:civ_border_color="#50000000"
                 app:civ_border_width="1sp"
                 android:elevation="10sp"
-                android:layout_margin="5sp"
+                android:layout_margin="10sp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"/>
 
