--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,16 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="info.androidhive.imagefilters.MainActivity">
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never"
-        android:title="Settings" />
+        android:id="@+id/action_done"
+        android:orderInCategory="101"
+        android:title="DONE"
+        app:showAsAction="always" />
 
-    <item android:id="@+id/menu_share"
-        android:icon="@drawable/heart_outline"
-        app:showAsAction="always"
-        android:title="Favorite" />
 </menu>
