--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,4 +48,16 @@
     <dimen name="profile_texts_h_offset">32dp</dimen>
     <dimen name="profile_texts_v_max_offset">66dp</dimen>
     <dimen name="profile_texts_v_min_offset">8dp</dimen>
+
+
+
+    <!--Image Filters-->
+    <dimen name="thumbnail_size">80dp</dimen>
+    <dimen name="recycler_size">100dp</dimen>
+    <dimen name="thumbnail_horizontal_padding">8dp</dimen>
+    <dimen name="thumbnail_vertical_padding">10dp</dimen>
+    <dimen name="padding_10">10dp</dimen>
+    <dimen name="margin_horizontal">16dp</dimen>
+    <dimen name="lbl_edit_image_control">100dp</dimen>
+
 </resources>
